fix to allow for better sizing on small screens

--- a/packages/vehicle-manufacture-car-builder/src/components/car-slide/car-slide.scss
+++ b/packages/vehicle-manufacture-car-builder/src/components/car-slide/car-slide.scss
@@ -3,4 +3,9 @@ car-slide {
     padding: 0 0 0 25px;
   }
 
+  .build {
+    img {
+      margin-right: 0!important;
+    }
+  }
 }
