--- a/packages/vehicle-manufacture-car-builder/src/pages/login/login.scss
+++ b/packages/vehicle-manufacture-car-builder/src/pages/login/login.scss
@@ -65,7 +65,7 @@ page-login {
         #buildCar {
           width: 100%;
           max-width: 400px;
-          min-width: 170px;
+          min-width: 190px;
           height: 11vh;
           max-height: 5em;
 
